<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:expanded="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctl_main_container"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:elevation="8dp"
            app:collapsedTitleTextAppearance="@style/CollapsedToolBarTitleTextAppearance"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginBottom="74dp"
            app:expandedTitleTextAppearance="@style/ExpandedToolBarTitleTextAppearance"
            app:layout_scrollFlags="enterAlways">

            <TextView
                android:id="@+id/tv_main_current_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="42dp"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_collapseMode="parallax"
                tools:text="06 апреля, 2020 " />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeToolbar"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_main_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:elevation="4dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/activity_main_add_task"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:icon="@drawable/ic_vector_add"
        app:iconTint="@color/colorBlack"
        app:layout_anchor="@id/ctl_main_container"
        app:layout_anchorGravity="bottom|center_horizontal" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_main_today_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/content_description_tasks_card"
                    app:srcCompat="@drawable/ic_vector_today" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:text="@string/common_today"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_main_count_today_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorGrey"
                    tools:text="1 заметка" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_main_plan_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/content_description_tasks_card"
                    app:srcCompat="@drawable/ic_vector_plan" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:text="@string/common_plan"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_main_count_plan_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorGrey"
                    tools:text="1 заметка" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_main_anytime_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/content_description_tasks_card"
                    app:srcCompat="@drawable/ic_vector_anytime" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:text="@string/common_anytime"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_main_count_anytime_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorGrey"
                    tools:text="1 заметка" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_main_someday_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/content_description_tasks_card"
                    app:srcCompat="@drawable/ic_vector_someday" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:text="@string/common_someday"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_main_count_someday_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorGrey"
                    tools:text="1 заметка" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>